2024-10-13  Karl Berry  <karl@freefriends.org>

	* Makefile (spell): new target.
	* dict.pws: new file, linked as .dict.pws.
	* cover2.tex (About the cover): tweak description.
	* cover3.tex (\abovecapsuleskip): reduce for tb141.
	* cover4.tex (\vfuzz): need 44pc for tb141.
	(\secskipa, \secskipb): reduce.

2024-10-11  Karl Berry  <karl@freefriends.org>

	* cover1.tex,
	* cover2.tex: link various urls now that we can (see tugboat.cmn).

2024-10-10  Karl Berry  <karl@freefriends.org>

	* Makefile (cover1.pdf): depend on coverdrawing.pdf not png.
	* cover1.tex: coverdrawing.pdf for tb141 (45:3).

	* cover2.tex (\rateyear): enable, since third issue;
	update sub rate to $140.
	(About the cover): update for McKay.
	
	* cover4.tex (\secskipa, \secskipb): reduce defaults
	from 6.0plus3 and 1.5plus1.

2024-08-30  Karl Berry  <karl@freefriends.org>

	* Makefile (ca): another alias for cadmus.
	(%): remove commented-out default.

	* cover2.tex: TUG -> \tug for 45:2 text.

	* tbcmplete.lua: doc.

2024-08-18  Karl Berry  <karl@freefriends.org>

	* Makefile (complete): show number of pages.
	* tbcomplete.lua: omit unneeded specification of last.

2024-08-17  Karl Berry  <karl@freefriends.org>

	* Makefile (c3_target): back to normal one page for tb140 (45:2).
	* cover1.tex: adjust space before conference drawing.
	* cover2.tex: cover image description; Jim now secretary.
	* cover3.tex: adjust \vfuzz for longer page.
	* cover4.tex: can use 10pt fonts; adjust skips.

2024-05-06  Karl Berry  <karl@tug.org>

	* Makefile (copynext): handle top-level issue dir too.

2024-04-28  Karl Berry  <karl@freefriends.org>

	* Makefile (copynext): more inclusions and exclusions when
	setting up next issue.

2024-04-14  Karl Berry  <karl@freefriends.org>

	* cover3.tex (\abovedifficultyskip): can increase slightly.

2024-04-13  Karl Berry  <karl@freefriends.org>

	* Makefile (deps): add tugboat.sty.
	(c3_target, c3_twopages): two-page c3 for 45:1.
	(cover1.pdf): depend on coverdrawing.pdf.