@@ -51,11 +51,12 @@
 \dlap{\boxit 5pc/1pc, \kern 23pc<
       \kern -66pt % move back into the box
       \noindent \kern 9pt
-      \tbhref{https://tug.org/TUGboat}
+      \tbhref{https://tug.org/TUGboat/}
              {\immediate\pdfximage {word-nobox.pdf}\pdfrefximage\pdflastximage}
       \par
       \kern 14pt
-      \boxit 1.5pc/.75pc, \commfont The Communications of the \TUG<
+      \tbhref{https://tug.org/TUGboat/}
+             {\boxit 1.5pc/.75pc, \commfont The Communications of the \TUG<}
 }
 
 % Date: Sun, 26 Dec 2004 15:28:53 -0500 (EST)
