@@ -77,7 +77,7 @@ access, and other benefits.  For further information, see
 \noindent The cover graphic was created by Keith McKay; it's an example
 of the art of asemic writing\Dash writing without meaning. Keith's
 article on pages \thisissuepageref{mckay-asemic} gives some history and
-describes how it was made, using Metafun and \ConTeXt.
+describes how it was made, using MetaFun and \ConTeXt.
 
 \bigskip \noindent {\bf Trademarks}
 
